[tool.poetry]
name = "base-java"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gonçalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.8.0"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.3"